--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 								<div class="collapse navbar-collapse navbar-responsive-collapse">
 									<ul class="nav navbar-nav">
 									<li><a href="contact.html">Inicio</a></li>
-									<li><a href="contact.html">Sobre mí</a></li>
-									<li><a href="contact.html">Servicios</a></li>
+									<li><a href="#ts-features">Sobre mí</a></li>
+									<li><a href="#ts-service-box">Servicios</a></li>
 									<li><a href="contact.html">Trabajos</a></li>
 									<li><a href="contact.html">Contacto</a></li>
 									</ul>
@@ -406,8 +406,8 @@
 				<div id="isotope" class="isotope">
 					<div class="col-md-4 col-sm-6 col-xs-12 commercial isotope-item">
 					   <div class="isotope-img-container">
-						  <a class="gallery-popup" href="images/projects/project1.jpg">
-							 <img class="img-responsive" src="images/projects/project1.jpg" alt="">
+						  <a class="gallery-popup" href="images/caja-electricidad.jpg">
+							 <img class="img-responsive" src="images/caja-electricidad.jpg" alt="">
 							 <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						  </a>
 						  <div class="project-item-info">
@@ -422,8 +422,8 @@
 					</div><!-- Isotope item 1 end -->
 					<div class="col-md-4 col-sm-6 col-xs-12 healthcare isotope-item">
 						<div class="isotope-img-container">
-						   <a class="gallery-popup" href="images/projects/project2.jpg">
-							  <img class="img-responsive" src="images/projects/project2.jpg" alt="">
+						   <a class="gallery-popup" href="images/cables-eletricidad.jpg">
+							  <img class="img-responsive" src="images/cables-eletricidad.jpg" alt="">
 							  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						   </a>
 						   <div class="project-item-info">
@@ -438,8 +438,8 @@
 					 </div><!-- Isotope item 2 end -->
 					 <div class="col-md-4 col-sm-6 col-xs-12 government isotope-item">
 						<div class="isotope-img-container">
-						   <a class="gallery-popup" href="images/projects/project3.jpg">
-							  <img class="img-responsive" src="images/projects/project3.jpg" alt="">
+						   <a class="gallery-popup" href="images/tablero-industrial.jpg">
+							  <img class="img-responsive" src="images/tablero-industrial.jpg" alt="">
 							  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						   </a>
 						   <div class="project-item-info">
@@ -454,8 +454,8 @@
 					 </div><!-- Isotope item 3 end -->
 					 <div class="col-md-4 col-sm-6 col-xs-12 education isotope-item">
 						<div class="isotope-img-container">
-						   <a class="gallery-popup" href="images/projects/project4.jpg">
-							  <img class="img-responsive" src="images/projects/project4.jpg" alt="">
+						   <a class="gallery-popup" href="images/tablero-electridad-industria.jpg">
+							  <img class="img-responsive" src="images/tablero-electridad-industria.jpg" alt="">
 							  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						   </a>
 						   <div class="project-item-info">
@@ -471,8 +471,8 @@
 	  
 					 <div class="col-md-4 col-sm-6 col-xs-12 infrastructure isotope-item">
 						<div class="isotope-img-container">
-						   <a class="gallery-popup" href="images/projects/project5.jpg">
-							  <img class="img-responsive" src="images/projects/project5.jpg" alt="">
+						   <a class="gallery-popup" href="images/placa-electronica.jpg">
+							  <img class="img-responsive" src="images/placa-electronica.jpg" alt="">
 							  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						   </a>
 						   <div class="project-item-info">
@@ -488,8 +488,8 @@
 	  
 					 <div class="col-md-4 col-sm-6 col-xs-12 residential isotope-item">
 						<div class="isotope-img-container">
-						   <a class="gallery-popup" href="images/projects/project6.jpg">
-							  <img class="img-responsive" src="images/projects/project6.jpg" alt="">
+						   <a class="gallery-popup" href="images/electricidad-industrial.jpg">
+							  <img class="img-responsive" src="images/electricidad-industrial.jpg" alt="">
 							  <span class="gallery-icon"><i class="fa fa-plus"></i></span>
 						   </a>
 						   <div class="project-item-info">
