--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 					<div class="logo-area clearfix">
 						<div class="logo col-xs-12 col-md-3">
 							<a href="index.html">
-								<img src="images/logo-jv2.png" alt="">
+							<img src="./images/logo-jv2.png">
 							</a>
-						</div><!-- logo end -->
+						</div>
+						<!-- logo end -->
 
 						<div class="col-xs-12 col-md-9 header-right">
 							<ul class="top-info-box">
@@ -139,11 +140,11 @@
 
 								<div class="collapse navbar-collapse navbar-responsive-collapse">
 									<ul class="nav navbar-nav">
-									<li><a href="contact.html">Inicio</a></li>
+									<li><a href="index.html">Inicio</a></li>
 									<li><a href="#ts-features">Sobre mí</a></li>
-									<li><a href="#ts-service-box">Servicios</a></li>
-									<li><a href="contact.html">Trabajos</a></li>
-									<li><a href="contact.html">Contacto</a></li>
+									<li><a href="#service">Servicios</a></li>
+									<li><a href="#isotope">Trabajos</a></li>
+									<li><a href="#contact">Contacto</a></li>
 									</ul>
 									<!--/ Nav ul end -->
 								</div>
@@ -264,7 +265,7 @@
 
 						<div class="gap-20"></div>
 
-						<div class="row">
+						<div id="service" class="row">
 							<div class="col-md-6">
 								<div class="ts-service-box">
 									<span class="ts-service-icon">
@@ -509,7 +510,7 @@
 
 <!------Contacto--------------->
 		 <section id="main-container" class="main-container">
-			<div class="container">
+			<div class="container" id="contact">
 	  
 			   <div class="row text-center">
 				  <h2 class="section-title">Reaching our Office</h2>
