Corrección muuuuy leve.

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 						  <img src="images/icon-image/portacables.png" alt="" />
 					   </div>
 					   <div class="ts-service-info">
-						  <h3 class="service-box-title"><a href="">Montaje de bandejas Standard y sanitarias</a></h3>
+						  <h3 class="service-box-title"><a href="">Montaje de bandejas Standard y Sanitarias</a></h3>
 					   </div>
 					</div><!-- Service3 end -->
 				 </div><!-- Col 3 end -->
