--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<div class="logo-area clearfix">
 						<div class="logo col-xs-12 col-md-3">
 							<a href="index.html">
-							<img src="./images/logo-jv2.png">
+							<img src="./images/logo-jv.png">
 							</a>
 						</div>
 						<!-- logo end -->
