--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 							<h2 class="into-title">Sobre mí</h2>
 							<h3 class="into-sub-title">Jorge Walter Vega</h3>
 							<h2 class="into-title">Electricista Industrial</h2>
-							<p>Estudié Electrónica Industrial, Electricidad Industrial y Automatismo en PLC.
-								Tengo 11 años de experiencia en instalaciones eléctricas industriales. Especialmente en industrias alimenticias y metalúrgicas.
-								He trabajado en el diseño, instalación, puesta a punto y mantenimiento de muy diversos proyectos, en empresas grandes, medianas y chicas.
+							<p>Estudié Electrónica Industrial, Electricidad Industrial y Automatismo en PLC.<br>
+								Tengo 11 años de experiencia en instalaciones eléctricas industriales. Tanto en industrias alimenticias como metalúrgicas.
+								Trabajo en la instalación, puesta a punto y mantenimiento de muy diversos proyectos, en empresas grandes, medianas y chicas.
 								Mi experiencia por lo tanto abarca una amplia gama de equipamientos y elementos afines.
 								</p>
 						</div><!-- Intro box end -->
@@ -490,8 +490,8 @@
 			<div class="container" id="contact">
 	  
 			   <div class="row text-center">
-				  <h2 class="section-title">Reaching our Office</h2>
-				  <h3 class="section-sub-title">Find Our Location</h3>
+				  <h2 class="section-title">Realice su consulta</h2>
+				  <h3 class="section-sub-title">Contacto/h3>
 			   </div><!--/ Title row end -->
 	  
 			   <div class="row">
@@ -501,7 +501,7 @@
 						   <i class="fa fa-map-marker"></i>
 						</span>
 						<div class="ts-service-box-content">
-						   <h4>Visit Our Office</h4>
+						   <h4>Taller</h4>
 						   <p>9051 Constra Incorporate, USA</p>
 					   </div>
 					 </div>
@@ -513,7 +513,7 @@
 						   <i class="fa fa-envelope"></i>
 						</span>
 						<div class="ts-service-box-content">
-						   <h4>Email Us</h4>
+						   <h4>Email</h4>
 						   <p>office@Constra.com</p>
 					   </div>
 					 </div>
@@ -525,8 +525,8 @@
 						   <i class="fa fa-phone-square"></i>
 						</span>
 						<div class="ts-service-box-content">
-						   <h4>Call Us</h4>
-						   <p>(+9) 847-291-4353</p>
+						   <h4>Teléfono</h4>
+						   <p>(+54)11 3498-5845</p>
 					   </div>
 					 </div>
 				  </div><!-- Col 3 end -->
@@ -536,14 +536,14 @@
 			   <div class="gap-60"></div>
 			   <div class="col-md-12">
                
-				<h3 class="column-title">We love to hear</h3>
+				<h3 class="column-title">Será un gusto asesorarlo</h3>
  
 				<form id="contact-form" action="contact-form.php" method="post" role="form">
 				   <div class="error-container"></div>
 				   <div class="row">
 					  <div class="col-md-6">
 						 <div class="form-group">
-							<label>Name</label>
+							<label>Nombre</label>
 						 <input class="form-control form-control-name" name="name" id="name" placeholder="" type="text" required>
 						 </div>
 					  </div>
@@ -556,11 +556,11 @@
 					  </div>
 				   </div>
 				   <div class="form-group">
-					  <label>Message</label>
+					  <label>Mensaje</label>
 					  <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10" required></textarea>
 				   </div>
 				   <div class="text-right"><br>
-					  <button class="btn btn-primary solid blank" type="submit">Send Message</button> 
+					  <button class="btn btn-primary solid blank" type="submit">Enviar</button> 
 				   </div>
 				</form>
 			 </div>
@@ -576,10 +576,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-sm-12 footer-widget footer-about">
-							<h3 class="widget-title">About Us</h3>
-							<img class="footer-logo" src="images/footer-logo.png" alt="" />
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
-								labore et dolore magna aliqua.</p>
+							<h3 class="widget-title">Electricidad Industrial JV</h3>
+							<img class="footer-logo" src="images/logo-jv.png" alt="" />
+							<p>Electricista industrial en General Rodríguez. Instalación y mantenimiento de 
+								instalaciones eléctricas en industrias
+							</p>
 							<div class="footer-social">
 								<ul>
 									<li><a href="https://facebook.com/themefisher"><i class="fa fa-facebook"></i></a></li>
@@ -590,25 +591,15 @@
 							</div><!-- Footer social end -->
 						</div><!-- Col end -->
 
-						<div class="col-md-4 col-sm-12 footer-widget">
-							<h3 class="widget-title">Working Hours</h3>
-							<div class="working-hours">
-								We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
-								Hotline and Contact form.
-								<br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
-								<br> Saturday: <span class="text-right">12:00 - 15:00</span>
-								<br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span>
-							</div>
-						</div><!-- Col end -->
 
 						<div class="col-md-4 col-sm-12 footer-widget">
 							<h3 class="widget-title">Services</h3>
 							<ul class="list-arrow">
-								<li><a href="service-single.html">Pre-Construction</a></li>
-								<li><a href="service-single.html">General Contracting</a></li>
-								<li><a href="service-single.html">Construction Management</a></li>
-								<li><a href="service-single.html">Design and Build</a></li>
-								<li><a href="service-single.html">Self-Perform Construction</a></li>
+								<li><a href="">Instalación</a></li>
+								<li><a href="">Electromecánica</a></li>
+								<li><a href="">Automatismo</a></li>
+								<li><a href="">Montaje de tableros</a></li>
+								<li><a href="">Armado de placas de tableros</a></li>
 							</ul>
 						</div><!-- Col end -->
 
@@ -626,17 +617,6 @@
 							</div>
 						</div>
 
-						<div class="col-xs-12 col-sm-6">
-							<div class="footer-menu">
-								<ul class="nav unstyled">
-									<li><a href="about.html">About</a></li>
-									<li><a href="team.html">Our people</a></li>
-									<li><a href="faq.html">Faq</a></li>
-									<li><a href="news-left-sidebar.html">Blog</a></li>
-									<li><a href="pricing.html">Pricing</a></li>
-								</ul>
-							</div>
-						</div>
 					</div><!-- Row end -->
 
 					<div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top affix">
