--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                
 				<h3 class="column-title">Será un gusto asesorarlo</h3>
  
-				<form id="contact-form" action="contact-form.php" method="post" role="form">
+				<form id="contact-form" action="mail.php.php" method="post" role="form">
 				   <div class="error-container"></div>
 				   <div class="row">
 					  <div class="col-md-6">
