--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 	  
 			   <div class="row text-center">
 				  <h2 class="section-title">Realice su consulta</h2>
-				  <h3 class="section-sub-title">Contacto/h3>
+				  <h3 class="section-sub-title">Contacto</h3>
 			   </div><!--/ Title row end -->
 	  
 			   <div class="row">
