--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
 	<!-- FontAwesome -->
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<!-- Animation -->
-	<link rel="stylesheet" href="css/animate.css">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/animate.css">
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Colorbox -->
 	<link rel="stylesheet" href="css/colorbox.css">
-
+   
 	<!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -181,8 +182,8 @@
 							<h2 class="slide-title animated4">Más de 10 años de experiencia en </h2>
 							<h3 class="slide-sub-title animated5">Electricidad Industrial</h3>
 							<p>
-								<a href="services.html" class="slider btn btn-primary">Servicios</a>
-								<a href="contact.html" class="slider btn btn-primary border">Contacto</a>
+								<a href="#service" class="slider btn btn-primary">Servicios</a>
+								<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 							</p>
 						</div>
 					</div>
@@ -195,8 +196,8 @@
 								<h2 class="slide-title animated4">Lograr un trabajo de excelencia es mi </h2>
 								<h3 class="slide-sub-title animated5">Compromiso</h3>
 								<p>
-									<a href="services.html" class="slider btn btn-primary">Servicios</a>
-									<a href="contact.html" class="slider btn btn-primary border">Contacto</a>
+									<a href="#service" class="slider btn btn-primary">Servicios</a>
+									<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 								</p>
 							</div>
 						</div>
@@ -209,8 +210,8 @@
 							<h2 class="slide-title animated4">Lo que su empresa precisa</h2>
 							<h3 class="slide-sub-title animated5">Equilibrio entre eficiencia <br> y costes</h3>
 							<p>
-								<a href="services.html" class="slider btn btn-primary">Servicios</a>
-								<a href="contact.html" class="slider btn btn-primary border">Contacto</a>
+								<a href="#service" class="slider btn btn-primary">Servicios</a>
+								<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 							</p>
 						</div>
 					</div>
@@ -235,7 +236,7 @@
 					<div class="row">
 						<div class="col-md-10">
 							<div class="call-to-action-text">
-								<h3 class="action-title">We understand your needs on construction</h3>
+								<h3 class="action-title">Electricidad Industrial JV - Energía positiva para su empresa</h3>
 							</div>
 						</div><!-- Col end -->
 						<div class="col-md-2">
@@ -266,8 +267,8 @@
 						<div class="gap-20"></div>
 
 						<div id="service" class="row">
-							<div class="col-md-6">
-								<div class="ts-service-box">
+							<div class="col-md-6" >
+								<div class="ts-service-box" data-aos="fade-up">
 									<span class="ts-service-icon">
 										<i class="fa fa-trophy"></i>
 									</span>
@@ -278,7 +279,7 @@
 							</div><!-- col end -->
 
 							<div class="col-md-6">
-								<div class="ts-service-box">
+								<div class="ts-service-box" data-aos="fade-up">
 									<span class="ts-service-icon">
 										<i class="fa fa-sliders"></i>
 									</span>
@@ -291,7 +292,7 @@
 
 						
 							<div class="col-md-6">
-								<div class="ts-service-box">
+								<div class="ts-service-box" data-aos="fade-up">
 									<span class="ts-service-icon">
 										<i class="fa fa-thumbs-up"></i>
 									</span>
@@ -302,7 +303,7 @@
 							</div><!-- col end -->
 
 							<div class="col-md-6">
-								<div class="ts-service-box">
+								<div class="ts-service-box" data-aos="fade-up">
 									<span class="ts-service-icon">
 										<i class="fa fa-users"></i>
 									</span>
@@ -328,7 +329,7 @@
 			</div>
 			<div class="gap-30"></div>
 			<div class="col-md-4">
-		      <div class="ts-service-box">
+		      <div class="ts-service-box" data-aos="fade-right" data-aos-offset="50">
 						<div class="ts-service-box-img pull-left">
 						   <img src="images/icon-image/service-icon2.png" alt="" />
 						</div>
@@ -339,7 +340,7 @@
 				  </div><!-- Col 1 end -->
 	  
 				  <div class="col-md-4">
-					 <div class="ts-service-box">
+					 <div class="ts-service-box" data-aos="fade-right" data-aos-offset="100">
 						<div class="ts-service-box-img pull-left">
 						   <img src="images/icon-image/motor-electrico.png" alt="" />
 						</div>
@@ -350,7 +351,7 @@
 				  </div><!-- Col 2 end -->
 	  
 				  <div class="col-md-4">
-					 <div class="ts-service-box">
+					 <div class="ts-service-box" data-aos="fade-right" data-aos-offset="150">
 						<div class="ts-service-box-img pull-left">
 						   <img src="images/icon-image/automatismo.png" alt="" />
 						</div>
@@ -361,7 +362,7 @@
 				  </div><!-- Col 3 end -->
 				  <div class="gap-30"></div>
 				  <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="50">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/portacables.png" alt="" />
 					   </div>
@@ -371,7 +372,7 @@
 					</div><!-- Service3 end -->
 				 </div><!-- Col 3 end -->
 				 <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="100">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/montaje-motor.png" alt="" />
 					   </div>
@@ -381,7 +382,7 @@
 					</div><!-- Service3 end -->
 				 </div><!-- Col 3 end -->
 				 <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="150">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/tendido-cables.png" alt="" />
 					   </div>
@@ -392,7 +393,7 @@
 				 </div><!-- Col 3 end -->
 				 <div class="gap-30"></div>
 				 <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="50">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/marcador.png" alt="" />
 					   </div>
@@ -402,7 +403,7 @@
 					</div><!-- Service3 end -->
 				 </div><!-- Col 3 end -->
 				 <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="100">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/tarjeta-de-circuito-impreso.png" alt="" />
 					   </div>
@@ -412,7 +413,7 @@
 					</div><!-- Service3 end -->
 				 </div><!-- Col 3 end -->
 				 <div class="col-md-4">
-					<div class="ts-service-box">
+					<div class="ts-service-box" data-aos="fade-right" data-aos-offset="150">
 					   <div class="ts-service-box-img pull-left">
 						  <img src="images/icon-image/planos-electricos.png" alt="" />
 					   </div>
@@ -425,9 +426,13 @@
 			</div><!-- Conatiner end -->
 		 </section><!-- Main container end -->
 	<!-----Galería---------->
-	<section id="main-container" class="main-container">
+	<section id="main-container" class="main-container galeria">
 		<div class="container">
 		   <div class="row">
+			<div class="ts-intro text-center">
+				<h3 class="into-sub-title">Proyectos</h3>
+			</div>
+			<div class="gap-30"></div>
 			  <div class="col-md-12">
 				<div id="isotope" class="isotope">
 					<div class="col-md-4 col-sm-6 col-xs-12 commercial isotope-item">
@@ -633,28 +638,25 @@
 
 		<!-- Javascript Files
 	================================================== -->
-
 		<!-- initialize jQuery Library -->
-		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="./js/jquery.js"></script>
 		<!-- Bootstrap jQuery -->
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./js/bootstrap.min.js"></script>
 		<!-- Owl Carousel -->
-		<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+		<script type="text/javascript" src="./js/owl.carousel.min.js"></script>
 		<!-- Color box -->
 		<script type="text/javascript" src="js/jquery.colorbox.js"></script>
 		<!-- Isotope -->
-		<script type="text/javascript" src="js/isotope.js"></script>
-		<script type="text/javascript" src="js/ini.isotope.js"></script>
+		<script type="text/javascript" src="./js/isotope.js"></script>
+		<script type="text/javascript" src="./js/ini.isotope.js"></script>
 
-
-    <!-- Google Map API Key-->
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"></script>
-		<!-- Google Map Plugin-->
-		<script type="text/javascript" src="js/gmap3.js"></script>
- 
 	 <!-- Template custom -->
-	 <script type="text/javascript" src="js/custom.js"></script>
-
+	 <script type="text/javascript" src="./js/custom.js"></script>
+	 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	 <script>
+		AOS.init();
+	  </script>
+	
 	</div><!-- Body inner end -->
 </body>
 
