--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 			<div class="container">
 				<div class="action-style-box">
 					<div class="row">
-						<div class="col-md text-center>
+						<div class="col-md text-center">
 							<div class="call-to-action-text">
 								<h3 class="action-title"> Energía positiva para su empresa</h3>
 							</div>
