--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 	   </div><!-- Conatiner end -->
 	</section><!-- Main container end -->
 	<div class="btn-whatsapp" data-aos="zoom-in">
-		<a href="https://api.whatsapp.com/send?phone=541134985845&text=Hola!%20Quisiera%20más%20información%acerca%de%20los%20servicios
+		<a href="https://api.whatsapp.com/send?phone=541134985845&text=Hola!%20Quisiera%20más%20información%20acerca%20de%20los%20servicios
 		%20que%20ofrece" target="_blank">
 		<img src="./css/whatsapp.png" alt="">
 		</a>
