Cambio en 1 slider

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<div class="item" style="background-image:url(images/slider2.jpg)">
 					<div class="slider-content">
 							<div class="col-md-12 text-center">
-								<h2 class="slide-title animated4">Lograr un trabajo de excelencia es mi </h2>
+								<h2 class="slide-title animated4">Para lograr el mejor resultado para su empresa</h2>
 								<h3 class="slide-sub-title animated5">Compromiso</h3>
 								<p>
 									<a href="#service" class="slider btn btn-primary">Servicios</a>
