--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 						</span>
 						<div class="ts-service-box-content">
 						   <h4>Email</h4>
-						   <p>office@Constra.com</p>
+						   <p>electricidadindustrialjv@gmail.com</p>
 					   </div>
 					 </div>
 				  </div><!-- Col 2 end -->
