--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>Electricidad Industrial JV</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="Electricidad industrial. Instalaciones y mantenimiento. Servicio a empresas en zona oeste de 
+	Buenos Aires">
+	<meta name="keywords" content="electricidad industrial, electricista industrial, electricista zona oeste, electricista en general Rodríguez ">
 
 	<!-- Mobile Specific Metas
 	================================================== -->
@@ -41,7 +42,17 @@
 	<!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
-    <![endif]-->
+	<![endif]-->
+	<link rel="shortcut icon" type="image/png" href="favicon.png"/>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162780618-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+         gtag('config', 'UA-162780618-1');
+     </script>
+
 
 </head>
 
@@ -85,7 +96,7 @@
 					<div class="logo-area clearfix">
 						<div class="logo col-xs-12 col-md-3">
 							<a href="index.html">
-							<img src="./images/logo-jv.png">
+							<img src="./images/logojv2.png">
 							</a>
 						</div>
 						<!-- logo end -->
@@ -104,12 +115,12 @@
 									<div class="info-box">
 										<div class="info-box-content">
 											<p class="info-box-title">Email</p>
-											<p class="info-box-subtitle">office@Constra.com</p>
+											<p class="info-box-subtitle">electricidadindustrialjv@gmail.com</p>
 										</div>
 									</div>
 								</li>
 								<li class="header-get-a-quote">
-									<a class="btn btn-primary" href="contact.html">Consulte</a>
+									<a class="btn btn-primary" href="#contact">Consulte</a>
 								</li>
 							</ul><!-- Ul end -->
 						</div><!-- header right end -->
@@ -134,7 +145,7 @@
 									<ul class="nav navbar-nav">
 									<li><a href="index.html">Inicio</a></li>
 									<li><a href="#ts-features">Sobre mí</a></li>
-									<li><a href="#service">Servicios</a></li>
+									<li><a href="#servicios">Servicios</a></li>
 									<li><a href="#isotope">Trabajos</a></li>
 									<li><a href="#contact">Contacto</a></li>
 									</ul>
@@ -173,7 +184,7 @@
 							<h2 class="slide-title animated4">Más de 10 años de experiencia en </h2>
 							<h3 class="slide-sub-title animated5">Electricidad Industrial</h3>
 							<p>
-								<a href="#service" class="slider btn btn-primary">Servicios</a>
+								<a href="#servicios" class="slider btn btn-primary">Servicios</a>
 								<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 							</p>
 						</div>
@@ -187,7 +198,7 @@
 								<h2 class="slide-title animated4">Para lograr el mejor resultado para su empresa</h2>
 								<h3 class="slide-sub-title animated5">Compromiso</h3>
 								<p>
-									<a href="#service" class="slider btn btn-primary">Servicios</a>
+									<a href="#servicios" class="slider btn btn-primary">Servicios</a>
 									<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 								</p>
 							</div>
@@ -201,7 +212,7 @@
 							<h2 class="slide-title animated4">Lo que su empresa precisa</h2>
 							<h3 class="slide-sub-title animated5">Equilibrio entre eficiencia <br> y costes</h3>
 							<p>
-								<a href="#service" class="slider btn btn-primary">Servicios</a>
+								<a href="#servicios" class="slider btn btn-primary">Servicios</a>
 								<a href="#contact" class="slider btn btn-primary border">Contacto</a>
 							</p>
 						</div>
@@ -261,7 +272,7 @@
     <section id="main-container" class="main-container servicios">
 		<div class="container">
 			<div class="row">
-			<div class="ts-intro text-center">
+			<div class="ts-intro text-center" id="servicios">
 				<h3 class="into-sub-title">Servicios</h3>
 			</div>
 			<div class="gap-30"></div>
@@ -524,7 +535,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-12 footer-widget footer-about">
 							<h3 class="widget-title">Electricidad Industrial JV</h3>
-							<img class="footer-logo" src="images/logo-jv.png" alt="" />
+							<img class="footer-logo" src="images/logojv2.png" alt="" />
 							<p>Electricista industrial en General Rodríguez. Instalación y mantenimiento de 
 								instalaciones eléctricas en industrias
 							</p>
