--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
                
 				<h3 class="column-title">Será un gusto asesorarlo</h3>
  
-				<form id="contact-form" action="mail.php.php" method="post" role="form">
-				   <div class="error-container"></div>
+				<form id="contact-form" action="mail.php" method="post" role="form">
+				   
 				   <div class="row">
 					  <div class="col-md-6">
 						 <div class="form-group">
@@ -512,6 +512,7 @@
 					  <label>Mensaje</label>
 					  <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10" required></textarea>
 				   </div>
+				   <div class="error-container"></div>
 				   <div class="text-right"><br>
 					  <button class="btn btn-primary solid blank" type="submit">Enviar</button> 
 				   </div>
